Run markdown link checker on a regular basis

--- a/.github/workflows/markdown-link-check.yml
+++ b/.github/workflows/markdown-link-check.yml
@@ -1,6 +1,12 @@
 name: Check Markdown links
 
-on: push
+on:
+  push:
+    branches:
+    - master
+  schedule:
+  # Run every monday at 9:00 AM
+  - cron: "0 9 * * 1"
 
 jobs:
   markdown-link-check:
