Add build workflow for python-cursor

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,11 @@ jobs:
         uses: edlanglois/pkgbuild-action@v1
         with:
           pkgdir: "python-kodistubs"
+  python-cursor:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and check python-cursor
+        uses: edlanglois/pkgbuild-action@v1
+        with:
+          pkgdir: "python-cursor"
