Add build workflow for kodi-addon-checker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,12 @@ jobs:
         uses: edlanglois/pkgbuild-action@v1
         with:
           pkgdir: "python-cursor"
+  kodi-addon-checker:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and check kodi-addon-checker
+        uses: edlanglois/pkgbuild-action@v1
+        with:
+          pkgdir: "kodi-addon-checker"
+          aurDeps: 1
